--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,15 @@ apply plugin: 'war'
 apply plugin: 'jacoco'
 apply plugin: 'jetty'
 
+
+configurations { codacy }
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    maven { url "https://jitpack.io" }
+    maven { url "http://dl.bintray.com/typesafe/maven-releases" }
 }
 
 // Define Jacoco tasks
@@ -27,13 +31,26 @@ jacoco {
 
 jacocoTestReport {
     reports {
-        xml.enabled false
+        xml.enabled true
         csv.enabled false
-        html.destination "${buildDir}/jacoco/jacocoHtml"
+        html.destination "${buildDir}/reports/jacoco/jacocoHtml"
     }
 }
 
+task sendCoverageToCodacy(type: JavaExec) {
+    main = "com.codacy.CodacyCoverageReporter"
+    classpath = configurations.codacy
+    args = [
+            "-l",
+            "Java",
+            "-r",
+            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    ]
+}
+
 test.finalizedBy(jacocoTestReport)
+
+jacocoTestReport.finalizedBy(sendCoverageToCodacy)
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
@@ -43,6 +60,9 @@ dependencies {
     compile 'org.scalatra:scalatra_2.10:2.3.1'
     // Add serlet dependency
     compile group: 'javax.servlet', name: 'servlet-api', version:'2.4'
+
+    // Use this 
+    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 
     // We use Scalatest for testing our library
     testCompile 'junit:junit:4.12'
